2000-08-03  Eli Zaretskii  <eliz@is.elta.co.il>

	* international/mule-cmds.el (select-safe-coding-system): Make
	the message text about selecting a safe coding system more clear.

2000-08-02  Gerd Moellmann  <gerd@gnu.org>

	* hi-lock.el: New file.

	* play/zone.el: New file.

	* replace.el (occur): Set tab-width in the *Occur* buffer to the
	value of tab-width in the original buffer.  Choose a line number
	format that's a multiple of the original buffer's tab width, so
	that lines appear right.

	* textmodes/ispell.el (ispell): New function, replacing an alias.
	Spell-check active region if in transient-mark-mode and mark
	is active; otherwise spell-check buffer.

2000-08-02  Vinicius Jose Latorre  <vinicius@cpqd.com.br>

	* ps-mule.el: Fix a customization problem on
	ps-mule-font-info-database-default.

2000-08-02  Eli Zaretskii  <eliz@is.elta.co.il>

	* progmodes/ebrowse.el (ebrowse-tree-mode-map): Use
	display-mouse-p instead of window-system.
	(ebrowse-member-mode-map): Ditto.

2000-08-01  Vinicius Jose Latorre  <vinicius@cpqd.com.br>

	* ebnf2ps.el: Update ps-print functions call.  Indentation fix.  Doc
	fix.
	(ebnf-version): New version number (3.2).
	(ebnf-format-color, ebnf-begin-job): Code fix.
	
2000-08-01  Eli Zaretskii  <eliz@is.elta.co.il>

	* net/net-utils.el (nslookup-font-lock-keywords): Don't condition
	font lock support on window-system.
	(ftp-font-lock-keywords, smbclient-font-lock-keywords): Likewise.

	* textmodes/ispell.el (ispell-highlight-spelling-error): Use
	display-color-p, if fboundp, instead of window-system.

2000-07-31  Eli Zaretskii  <eliz@is.elta.co.il>

	* calendar/appt.el (appt-disp-window): Use display-multi-frame-p
	instead of window-system.

	* wid-edit.el (widget-choose): Use display-mouse-p instead of
	window-system.
	(widget-choice-mouse-down-action): Use display-popup-menus-p
	instead of window-system.

	* strokes.el (strokes-file): Run the file name through
	convert-standard-filename.